--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <html>
 <head>
-</head>
-<body>
-hello
-hi , how are you
+
+
+<title> sample website  </title>
+  <style>
+  body {
+    background: url("Background.jpg"); 
+    }
+  </style>
+ <style>
+  marquee {
+    font-family: "Comic Sans MS"; 
+    }
+  </style>
+  </head>
+  <body>
+    <background="Background.jpg">
+    <center>
+  <img src="logo.jpeg" height="55%" width="70%" align="middle"> 
+  </img>       
+      <br></br>
+   </center>
+  <marquee><b><h1> CUISINES </h1>
+    </marquee> </b>
+    <br></br>
+    <br></br>
 </body>
 </html>
