--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> sample website  </title>
   <style>
   body {
-    background: url("Background.jpg"); 
+    background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fbackground&psig=AOvVaw11e8yUfgl-6POk4UqLbp3B&ust=1592902085111000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJjWvumEleoCFQAAAAAdAAAAABAD"); 
     }
   </style>
  <style>
@@ -15,13 +15,13 @@
   </style>
   </head>
   <body>
-    <background="Background.jpg">
+    <background="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fbackground&psig=AOvVaw11e8yUfgl-6POk4UqLbp3B&ust=1592902085111000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJjWvumEleoCFQAAAAAdAAAAABAD">
     <center>
   <img src="logo.jpeg" height="55%" width="70%" align="middle"> 
   </img>       
       <br></br>
    </center>
-  <marquee><b><h1> CUISINES </h1>
+  <marquee><b><h1> sample </h1>
     </marquee> </b>
     <br></br>
     <br></br>
