--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
   </head>
   <body>
-    <background="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fbackground&psig=AOvVaw11e8yUfgl-6POk4UqLbp3B&ust=1592902085111000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJjWvumEleoCFQAAAAAdAAAAABAD">
+    <background="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fbackground&psig=AOvVaw11e8yUfgl-6POk4UqLbp3B&ust=1592902085111000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJjWvumEleoCFQAAAAAdAAAAABAD");
     <center>
   <img src="logo.jpeg" height="55%" width="70%" align="middle"> 
   </img>       
