--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <title> sample website  </title>
   <style>
   body {
-    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fbackground&psig=AOvVaw11e8yUfgl-6POk4UqLbp3B&ust=1592902085111000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJjWvumEleoCFQAAAAAdAAAAABAD"); 
-    }
+    background-image: url("background.jpg");
   </style>
  <style>
   marquee {
