--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> sample website  </title>
   <style>
   body {
-    background-image: url("background.jpg");
+    background-color: red;
   </style>
  <style>
   marquee {
