--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 
 
 <title> sample website  </title>
-  <style>
-  body {
-    background-color: red;
-  </style>
+ 
+ 
  <style>
   marquee {
     font-family: "Comic Sans MS"; 
     }
   </style>
   </head>
-  <body>
+  <body style="background-color:grey;">
     
     <center>
   <img src="logo.jpeg" height="55%" width="70%" align="middle"> 
