--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-
-
 <title> sample website  </title>
- 
- 
  <style>
   marquee {
     font-family: "Comic Sans MS"; 
@@ -14,7 +10,7 @@
   <body style="background-color:grey;">
     
     <center>
-  <img src="logo.jpeg" height="55%" width="70%" align="middle"> 
+  <img src="background.jpg" height="55%" width="70%" align="middle"> 
   </img>       
       <br></br>
    </center>
