--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </style>
   </head>
   <body style="background-color:grey;">
-    
+    <h1>learn                                                                           to solve</h1>
     <center>
   <img src="background.jpg" height="55%" width="70%" align="middle"> 
   </img>       
